Updated the pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -57,3 +57,11 @@
 	</build>
 
 </project>
+total 16
+drwxrwxr-x. 3 yogananda yogananda   83 Mar 17 05:56 .
+drwxrwxr-x. 4 yogananda yogananda   37 Mar 17 05:29 ..
+drwxrwxr-x. 8 yogananda yogananda  220 Mar 24 10:31 .git
+-rw-rw-r--. 1 yogananda yogananda  278 Mar 17 05:29 .gitignore
+-rw-rw-r--. 1 yogananda yogananda  609 Mar 17 05:29 HELP.md
+-rw-rw-r--. 1 yogananda yogananda 1774 Mar 17 05:29 pom.xml
+-rw-rw-r--. 1 yogananda yogananda   13 Mar 17 05:29 README.md
